# odeanimate

./: .drone.yml  .gitignore  .nvimrc  Dockerfile  Pipfile  README.md  cmd.sh  mkdocs.yml  pyproject.toml  setup.py
docs/: api-example.md  index.md
docs/examples/: 00-intro.ipynb  Untitled.ipynb  algebra.ipynb  arrays.ipynb  axes-demo.ipynb  calculus-riemann-sum.ipynb  calculus-tangent-line.ipynb  curve-evolute.ipynb  curve-operations.ipynb  curves-lissajous.ipynb  example.ipynb  frenet-frame.ipynb  gram-schmidt.ipynb  harmonic-oscilator.ipynb  index.md  interactive-curves.ipynb  isoclines-example.ipynb  matrix-vector-rotation.ipynb  mechanics-furuta.ipynb  plot-3d-spherical-curve.ipynb  plot-area-under-curve.ipynb  polynomial.ipynb  roots_of_unity.ipynb  trajectory.ipynb  vector-2d.ipynb
docs/tests/: array.md
examples/: art-furuta.py  complex-roots-of-unity.py  curve-1D-geometry-evolute.py  curve-dimension-1-mul.py  curve-dimension-1-riemann-sum.py  curve-dimension-1-sum.py  curve-dimension-1.py  curve-geometry.py  curve-map.py  domains-interval-piecewise-chess.py  domains-interval-piecewise-function.py  matrix-rotation.py  ode-comparison.py  output.py  plots-cartesian-kwargs.py  plots-cartesian.py  plots-derivative-tangent.py  plots-intervals-01.py  plots-isoclines-examples-with-solution.py  plots-isoclines-examples.py  plots-isoclines-orthogonal-curves-solutions.py  plots-isoclines-orthogonal-curves.py  plots-isoclines.py  plots-riemann-sum.py  polinomial-01.py  polinomial-02.py  polinomial-03.py  polinomial-04.py  vector-2d-angle.py  vector-2d.ipynb  vector-curve-decorator.py  vector-curve-function.py  vector-gram-schmidt.py  vector-usage.py
examples/notebooks/: 00-intro.ipynb  calculus-riemann-sum.ipynb  calculus-tangent-line.ipynb  curve-evolute.ipynb  curve-operations.ipynb  curves-lissajous.ipynb  example.ipynb  frenet-frame.ipynb  gram-schmidt.ipynb  interactive-curves.ipynb  matrix-vector-rotation.ipynb  mechanics-furuta.ipynb  polynomial.ipynb  roots_of_unity.ipynb  vector-2d.ipynb
odeanimate/: __init__.py  array.py  codomain.py  constants.py  curve.py  domains.py  fields.py  jupyter.py  matrix.py  meta.py  utils.py  vector.py
odeanimate/methods/: curves2D.py  geometry.py  integration.py  ode.py  polinomial.py  polynomial.py
odeanimate/plots/: __init__.py  axes.py  integrals.py  ode.py  vectors.py
scripts/: Dockerfile  auto-doc.py  build-docs.sh  build-notebooks.sh  build.sh  clean-notebooks.sh  clean.sh  docker-build.sh  docker-shell.sh  docs.sh  entrypoint.sh  examples.sh  format.sh  install-dev-deps.sh  lint.sh  publish-docs.sh  publish.sh  publish_docs.sh  tests.sh
tests/: test_curves.py  test_trayectory.py  test_vector.py  test_vector_2d.py  test_vector_from_methods.py
