[project]
name = "odeanimate"
authors = [
    { name="Miguel Alejandro Salgado Zapien", email="ekiim@ekiim.xyz"},
]
description = "A module for useful quick mathematical calculation, plotting and animation."
readme="README.md"
requires-python = ">= 3.11"
license = {text = "GPL-2.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib"
]
dynamic = ["version"]

[metadata]
license = "GPL 2"

[project.urls]
"Homepage" = "https://odeanimate.ekiim.xyz"
"Source" = "https://github.com/ekiim/odeanimate"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
include = ["odeanimate*"]

[tool.setuptools.dynamic]
version = {attr = "odeanimate.__version__"}

[tool.pytest.ini_options]
addopts = "-q --doctest-modules --cov=odeanimate"
testpaths = ["odeanimate", "tests"]
python_files = "*.py"

[tool.pytest.plugins]
cov = {source = "odeanimate"}
doctestplus = {}

[tool.black]
line-length = 80
docstring-style = 'ignore'

